--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,8 +10,6 @@
   "dependencies": {
     "@doubledutch/rn-client": "^2.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-loose": "^8.0.0",
     "base-64": "^0.1.0",
     "json-loader": "^0.5.4",
     "react": "~16.0.0-alpha.12",
@@ -27,6 +25,8 @@
     "react-navigation": "^1.0.0-beta.9"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "dd-rn-packager": "~0.46.8"
   }
 }
