--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/dd-rn-packager/react-native/local-cli/cli.js start --port 8081",
+    "clean": "watchman watch-del-all && rm -rf node_modules && rm -fr $TMPDIR/react-* && rm -rf ios/build && yarn",
     "ios": "node node_modules/dd-rn-packager/react-native/local-cli/cli.js run-ios",
     "android": "node node_modules/dd-rn-packager/react-native/local-cli/cli.js run-android"
   },
   "dependencies": {
     "@doubledutch/firebase-connector": "^3.0.0",
-    "@doubledutch/rn-client": "^2.0.0",
+    "@doubledutch/rn-client": "^3.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "base-64": "^0.1.0",
     "json-loader": "^0.5.4",
