--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,7 +21,7 @@
     "react-native-camera": "^0.10.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-qrcode": "^0.2.6",
-    "react-native-qrcode-scanner": "^0.0.22",
+    "react-native-qrcode-scanner": "0.0.27",
     "react-native-video": "^2.0.0",
     "react-native-youtube": "^1.0.0",
     "react-navigation": "^1.0.0-beta.9"
