--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "react-native-cached-image": "^1.3.3",
     "react-native-camera": "^0.10.0",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-qrcode": "^0.2.6",
     "react-native-qrcode-scanner": "0.0.27",
     "react-native-video": "^2.0.0",
