--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@doubledutch/firebase-connector": "^3.0.0",
-    "@doubledutch/rn-client": "^3.0.1",
+    "@doubledutch/rn-client": "3.5.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "base-64": "^0.1.0",
     "json-loader": "^0.5.4",
