--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,13 +9,10 @@
     "android": "node node_modules/dd-rn-packager/react-native/local-cli/cli.js run-android"
   },
   "dependencies": {
-    "@doubledutch/firebase-connector": "^3.0.0",
-    "@doubledutch/rn-client": "3.5.1",
+    "@doubledutch/firebase-connector": "^4.1.0",
+    "@doubledutch/rn-client": "^4.2.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "base-64": "^0.1.0",
-    "json-loader": "^0.5.4",
     "react": "~16.0.0-alpha.12",
-    "react-addons-update": "~15.6.0",
     "react-native": "0.46.4",
     "react-native-cached-image": "^1.3.3",
     "react-native-camera": "^0.10.0",
@@ -24,8 +21,7 @@
     "react-native-qrcode": "^0.2.6",
     "react-native-qrcode-scanner": "0.0.28",
     "react-native-video": "^2.0.0",
-    "react-native-youtube": "^1.0.0",
-    "react-navigation": "^1.0.0-beta.9"
+    "react-native-youtube": "^1.0.0"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
