--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,25 +3,22 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start --port 8081",
-    "clean": "watchman watch-del-all && rm -rf node_modules && rm -fr $TMPDIR/react-* && rm -rf ios/build && yarn",
-    "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
-    "android": "node node_modules/react-native/local-cli/cli.js run-android"
+    "start": "(sleep 5 ; echo ; echo ===================== ; echo Launch the DoubleDutch Simulator to connect. See https://github.com/doubledutch/simulator#doubledutch-extension-simulator ; echo ===================== ) & react-native start --port 8081",
+    "clean": "watchman watch-del-all && rm -rf node_modules && rm -fr $TMPDIR/react-* && rm -rf ios/build && yarn"
   },
   "dependencies": {
     "@doubledutch/firebase-connector": "^4.1.0",
-    "@doubledutch/rn-client": "^4.2.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "react": "~16.0.0-alpha.12",
-    "react-native": "0.46.4",
+    "@doubledutch/rn-client": "5.0.0-alpha",
+    "react": "16.6.1",
+    "react-native": "0.57.5",
     "react-native-cached-image": "^1.3.3",
-    "react-native-camera": "^0.10.0",
-    "react-native-fetch-blob": "^0.10.8",
+    "react-native-camera": "1.4.3",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-qrcode": "^0.2.6",
     "react-native-qrcode-scanner": "0.0.28",
-    "react-native-video": "^2.0.0",
-    "react-native-youtube": "^1.0.0"
+    "react-native-video": "3.2.1",
+    "react-native-youtube": "1.1.0",
+    "rn-fetch-blob": "0.10.13"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
