--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,9 +21,7 @@
     "rn-fetch-blob": "0.10.13"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-jest": "23.6.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
@@ -36,6 +34,9 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
-    "prettier": "^1.15.2"
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.49.2",
+    "prettier": "^1.15.2",
+    "react-test-renderer": "16.6.1"
   }
 }
