--- a/mobile/package.json
+++ b/mobile/package.json
@@ -35,7 +35,7 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.49.2",
+    "metro-react-native-babel-preset": "^0.50.0",
     "prettier": "^1.15.2",
     "react-test-renderer": "16.6.1"
   }
