--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,30 +3,25 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start --port 8081",
-    "clean": "watchman watch-del-all && rm -rf node_modules && rm -fr $TMPDIR/react-* && rm -rf ios/build && yarn",
-    "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
-    "android": "node node_modules/react-native/local-cli/cli.js run-android"
+    "start": "(sleep 5 ; echo ; echo ===================== ; echo Launch the DoubleDutch Simulator to connect. See https://github.com/doubledutch/simulator#doubledutch-extension-simulator ; echo ===================== ) & react-native start --port 8081",
+    "clean": "watchman watch-del-all && rm -rf node_modules && rm -rf /tmp/metro-bundler-cache-* && rm -rf /tmp/haste-map-react-native-packager-* && (yarn || npm i)"
   },
   "dependencies": {
     "@doubledutch/firebase-connector": "^4.1.0",
-    "@doubledutch/rn-client": "^4.2.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "react": "~16.0.0-alpha.12",
-    "react-native": "0.46.4",
+    "@doubledutch/rn-client": "5.0.1-alpha",
+    "react": "16.6.1",
+    "react-native": "0.57.5",
     "react-native-cached-image": "^1.3.3",
-    "react-native-camera": "^0.10.0",
-    "react-native-fetch-blob": "^0.10.8",
+    "react-native-camera": "1.4.3",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-qrcode": "^0.2.6",
     "react-native-qrcode-scanner": "0.0.28",
-    "react-native-video": "^2.0.0",
-    "react-native-youtube": "^1.0.0"
+    "react-native-video": "3.2.1",
+    "react-native-youtube": "1.1.0",
+    "rn-fetch-blob": "0.10.13"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-jest": "23.6.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
@@ -39,6 +34,9 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
-    "prettier": "^1.15.2"
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.50.0",
+    "prettier": "^1.15.2",
+    "react-test-renderer": "16.6.1"
   }
 }
