--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,7 @@
     "clean": "watchman watch-del-all && rm -rf node_modules && rm -rf /tmp/metro-bundler-cache-* && rm -rf /tmp/haste-map-react-native-packager-* && (yarn || npm i)"
   },
   "dependencies": {
-    "@doubledutch/firebase-connector": "^4.1.0",
+    "@doubledutch/firebase-connector": "^4.1.2",
     "@doubledutch/rn-client": "5.0.1-alpha",
     "react": "16.6.1",
     "react-native": "0.57.5",
@@ -35,7 +35,7 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.50.0",
+    "metro-react-native-babel-preset": "^0.50.0",
     "prettier": "^1.15.2",
     "react-test-renderer": "16.6.1"
   }
