--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,22 +21,23 @@
     "rn-fetch-blob": "0.10.13"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "eslint": "^5.9.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "24.3.0",
+    "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-import-resolver-node": "^0.3.2",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-css-modules": "^2.10.0",
-    "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-react-native": "^3.5.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "^0.50.0",
-    "prettier": "^1.15.2",
-    "react-test-renderer": "16.6.1"
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-native": "^3.6.0",
+    "jest": "24.3.0",
+    "metro-react-native-babel-preset": "^0.53.0",
+    "prettier": "^1.16.4",
+    "react-test-renderer": "16.8.4"
   }
 }
