--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,21 +4,20 @@
   "private": true,
   "scripts": {
     "start": "(sleep 5 ; echo ; echo ===================== ; echo Launch the DoubleDutch Simulator to connect. See https://github.com/doubledutch/simulator#doubledutch-extension-simulator ; echo ===================== ) & react-native start --port 8081",
-    "clean": "watchman watch-del-all && rm -rf node_modules && rm -rf /tmp/metro-bundler-cache-* && rm -rf /tmp/haste-map-react-native-packager-* && (yarn || npm i)"
+    "clean": "watchman watch-del-all && rm -rf node_modules && rm -rf /tmp/metro-bundler-cache-* && rm -rf /tmp/haste-map-react-native-packager-* && npm i"
   },
   "dependencies": {
     "@doubledutch/firebase-connector": "^4.1.2",
-    "@doubledutch/rn-client": "5.0.2-alpha",
-    "react": "16.6.1",
-    "react-native": "0.57.5",
-    "react-native-cached-image": "^1.3.3",
-    "react-native-camera": "1.4.3",
+    "@doubledutch/rn-client": "^5.0.4-alpha",
+    "react": "16.8.3",
+    "react-native": "0.59.1",
+    "react-native-camera": "2.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-qrcode": "^0.2.6",
     "react-native-qrcode-scanner": "0.0.28",
-    "react-native-video": "3.2.1",
+    "react-native-video": "4.4.0",
     "react-native-youtube": "1.1.0",
-    "rn-fetch-blob": "0.10.13"
+    "rn-fetch-blob": "0.10.15"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -36,8 +35,8 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-native": "^3.6.0",
     "jest": "24.5.0",
-    "metro-react-native-babel-preset": "^0.53.0",
+    "metro-react-native-babel-preset": "^0.53.1",
     "prettier": "^1.16.4",
-    "react-test-renderer": "16.8.4"
+    "react-test-renderer": "16.8.3"
   }
 }
