--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@doubledutch/firebase-connector": "^4.1.2",
-    "@doubledutch/rn-client": "^5.0.4-alpha",
+    "@doubledutch/rn-client": "^5.0.0",
     "react": "16.8.3",
     "react-native": "0.59.1",
     "react-native-camera": "2.0.1",
@@ -22,7 +22,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-jest": "24.5.0",
-    "eslint": "^5.15.1",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-import-resolver-node": "^0.3.2",
