--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "personalleads",
-  "version": "0.1.2",
+  "version": "1.3.0",
   "baseBundleVersion": "0.59.1",
   "private": true,
   "scripts": {
     "start": "react-native start",
     "run": "node_modules/react-native/local-cli/cli.js run-ios"
   },
-  "license": "apache-2.0",
+  "license": "Apache-2.0",
   "doubledutch": {
     "extension": true
   }
